# algo-deployment

./: Dockerrun.aws.json  README.md  buildspec.yml  manage.py  pyproject.toml
config/gunicorn/: config.py
docker/: Dockerfile  docker-compose.yml
scripts/: start.sh
src/: app.py  context.py
src/algo/: README.md  converted_script.py  model.pickle  test_model_load.py  training.ipynb
src/algo/data/: F1_training.csv
src/commands/: __init__.py  converter.py
src/graphql/: schema.py
src/graphql/programmatic/: __init__.py  api_call.py
src/graphql/queries/: __init__.py  prediction.py
src/utils/: __init__.py  model_predict.py
