[tool.poetry]
name = "algo-deployment"
version = "0.1.0"
description = ""
authors = ["Alteian <Alteian@proton.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = "^0.195.2"
starlette = "^0.30.0"
nbformat = "^5.9.1"
nbconvert = "^7.6.0"
uvicorn = "^0.23.0"
pandas = "^2.0.3"
pydantic = "^2.0.3"
ipython = "^8.14.0"
scikit-learn = "^1.3.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
